--- a/website/templates/course.html
+++ b/website/templates/course.html
@@ -30,9 +30,9 @@
 <br/><br/>
 <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 
-<a href="{% url 'delete_record' customer_record.id %}" class="btn btn-danger">Delete</a>
+<a href="{% url 'delete_course' customer_course.id %}" class="btn btn-danger">Delete</a>
 
-<a href="{% url 'update_record' customer_record.id %}" class="btn btn-secondary">Update Record</a>
+<a href="{% url 'update_course' customer_course.id %}" class="btn btn-secondary">Update Course</a>
 		
 
 {% endblock %}
