--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -14,6 +14,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'add_course' %}">Add Course</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_package' %}">Add Package</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
