updation in the code

--- a/website/templates/course.html
+++ b/website/templates/course.html
@@ -3,12 +3,6 @@
 
 
 
-<!-- <div class="card">
-  <div class="card-header"><strong>
-    	{{ customer_record.first_name }} 
-		{{ customer_record.last_name }}</strong>
-  </div>
-  <div class="card-body"> -->
 
 
 
@@ -16,7 +10,7 @@
 <strong>Course name: </strong>{{ customer_course.coursename }}</p>
 
 <p class="card-text">
-<strong>Course description: </strong>{{ customer_course.cousedescription }}
+<strong>Course description: </strong>{{ customer_course.coursedescription }}
 </p>
 
 
