--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -44,6 +44,11 @@
 	  </tbody>
 	</table>
 
+
+  <br/>
+  <br/>
+  <br/>
+
   <table class="table table-striped table-hover table-bordered">
     <thead class="table-dark">
       <tr>
@@ -64,6 +69,13 @@
 	{% endfor %}
 
 {% endif %}
+
+</tbody>
+</table>
+
+<br/>
+<br/>
+<br/>
 
 <table class="table table-striped table-hover table-bordered">
   <thead class="table-dark">
