--- a/website/templates/update_package.html
+++ b/website/templates/update_package.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
-<h1>Add Package</h1>
+<h1>Update Package</h1>
 <br/>
 
 <form method="POST">
@@ -14,3 +14,4 @@
   <button type="submit" class="btn btn-secondary">Update Package</button>
 
 </form>
+{% endblock %}
