--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -100,6 +100,75 @@
 
 {% endif %}
 
+</tbody>
+</table>
+
+
+
+<br/>
+<br/>
+
+
+<table class="table table-striped table-hover table-bordered">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Option ID</th>
+      <th scope="col">Package ID</th>
+      <th scope="col">Course ID</th>
+
+    </tr>
+  </thead>
+  <tbody>
+
+  {% if packageoptions %}
+    {% for packageoption in packageoptions %}
+      <tr>
+        
+        <td><a href="{% url 'packageoptions' packageoptions.OptionID %}">{{ packageoptions.id }}</a></td>
+        <td><a href="{% url 'packageoptions' packageoptions.courseid %}">{{ packageoptions.courseid }}</a></td>
+        <td><a href="{% url 'packageoptions' packageoptions.packageid %}">{{ packageoptions.packageid }}</a></td>
+  </tr>
+{% endfor %}
+
+{% endif %}
+
+
+</tbody>
+</table>
+
+<br/>
+<br/>
+<br/>
+
+
+<table class="table table-striped table-hover table-bordered">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Payment Date</th>
+      <th scope="col">Expiry Date</th>
+      <th scope="col">Record ID</th>
+      <th scope="col">Package ID</th>
+      <th scope="col">ID</th>
+    </tr>
+  </thead>
+  <tbody>
+
+  {% if subscriptions %}
+    {% for subscription in subscriptions %}
+      <tr>
+        <td>{{ subscription.paymentdate }}</td>
+        <td>{{ subscription.expirydate }}</td>
+        <td><a href="{% url 'subscription' subscription.id %}">{{ subscription.id }}</a></td>
+        <td><a href="{% url 'subscription' subscription.recordid %}">{{ subscription.recordid }}</a></td>
+        <td><a href="{% url 'subscription' subscription.packageid %}">{{ subscription.packageid }}</a></td>
+  </tr>
+{% endfor %}
+
+{% endif %}
+
+</tbody>
+</table>
+
 
 {% else %}
 
