--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -18,6 +18,17 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'add_package' %}">Add Package</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_packageoptions' %}">Add PackageOptions</a>
+        </li>
+
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_subscription' %}">Add Subscription</a>
+        </li>
+
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
